# ASB-Auto-Subs

./: .gitignore  .gitmodules  MANIFEST.in  README.md  publish.ps1  pyproject.toml  requirements.txt  run_groq_gen.bat
groq_sub_gen/: local.py  main.py  remote.py  shared.py  watcher.py
