[build-system]
requires = [
    "setuptools>=61.0", # PEP 621 support in setuptools
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "asb-auto-subgen"
version = "1.0.2"
description = "A tool for downloading YouTube audio, generating subtitles, and sending them to an HTTP endpoint."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [
    { name = "bpwhelan", email = "your-email@example.com" }
]
urls = { Homepage = "https://github.com/bpwhelan/ASB-Auto-Subgen", Repository = "https://github.com/bpwhelan/ASB-Auto-Subgen" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "dataclasses-json>=0.6.7",
    "groq>=1.0.0",
    "numba>=0.63.1",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.3",
    "requests~=2.32.3",
    "watchdog>=6.0.0",
    "yt-dlp>=2026.2.4",
]

[project.scripts]
asb-auto-subgen = "groq_sub_gen.main:main"

[project.optional-dependencies]
local = [
    "stable-ts>=2.19.1",
]

[tool.setuptools]
packages = ["groq_sub_gen", "asbplayer"]

[tool.setuptools.package-data]
"asbplayer" = [
    "scripts/web-socket-server/main.go",
    "scripts/web-socket-server/go.mod",
    "scripts/web-socket-server/go.sum",
    "scripts/web-socket-server/cli/*",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
]

